--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background-color: black;
+    background-color: white;
   }
   
   a {
@@ -46,7 +46,7 @@ body {
   
   .form-control {
     margin:0px auto;
-    width: 25%;
+    width: 50%;
   }
   
   .formstyle {
